--- a/templates/dropzone.html
+++ b/templates/dropzone.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Cloud Files Image Thingy</h1>
+      <h1>Cloud Files Uploader</h1>
       <div class="jumbotron">
         <form action="{{ fp['cf_path'] }}" method="POST" enctype="multipart/form-data" class="dropzone">
             <h2 class="form-signin-heading"></h2>
